[package]
name = "del-gl"
version = "0.1.3"
edition = "2021"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
build = "build.rs"
license = "MIT"
repository = "https://github.com/nobuyuki83/del-gl/"
description = "OpenGL utility library in Rust language."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.29.1"
num-traits = "0.2.15"
nalgebra = "0.31.2"

[build-dependencies]
gl_generator = "0.14.0"