[package]
name = "del-gl"
version = "0.1.3"
edition = "2021"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
build = "build.rs"
license = "MIT"
repository = "https://github.com/nobuyuki83/del-gl/"
description = "OpenGL utility library in Rust language."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.32.0"
glutin-winit = "0.5.0"
winit = "0.30.5"
raw-window-handle = "0.6"
image = "0.25.2"

num-traits = "0.2.19"
nalgebra = "*"

[build-dependencies]
gl_generator = "0.14.0"