[package]
name = "del-gl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"
license.workspace = true
repository.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.19"

[build-dependencies]
gl_generator = "0.14.0"