[package]
name = "del-winit-glutin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.32.0"
glutin-winit = "0.5.0"
winit = "0.30.5"
raw-window-handle = "0.6.2"
num-traits = "0.2.19"
del-gl-core = { path = "../del-gl-core" }
del-geo-core = {workspace = true }